--- a/templates/social-media-platforms-links.html.twig
+++ b/templates/social-media-platforms-links.html.twig
@@ -5,32 +5,36 @@
  *
  * Available variables:
  * - attributes: HTML attributes for the item.
- * - show_icon:
- * - show_label:
- * - target_blank:
- * - links: A nested list of link items. Each link item contains:
+ * - display_options: An array of the display options
+ *   - show_icon: Whether to show the icon or not.
+ *   - show_label: Whether to show the label or not.
+ *   - target_blank: Whether to add target_blank to the links.
+ * - platforms: A nested list of link items. Each link item contains:
  *   - attributes: HTML attributes for the menu item.
- *   - image_url: The social media link image path.
- *   - title: The link title.
- *   - link_url: The link URL, instance of \Drupal\Core\Url
+ *   - image: The social media link image path.
+ *   - label: The link title.
+ *   - url: The link URL, instance of \Drupal\Core\Url
  */
 #}
+<div {{attributes.addClass('social-media-platforms__container')}}>
 
-{% set link_classes = ['social-media-platforms__link '] %}
-{% set container_classes = ['social-media-platforms__container '] %}
+{% for key, item in platforms %}
 
-<div{{ attributes.addClass(container_classes) }}>
-    {% for key, link in links %}
-        {% if link.link_url|render|trim is not empty  %}
-          {% set link_classes = link_classes|merge(['social-media-platforms__link--' ~ key]) %}
-          <a{{ link.attributes.addClass(link_classes) }} href="{{ link.link_url }}" {{ target_blank ? 'target="_blank"' : '' }}>
-            {% if show_icon  %}
-              <img class="social-media-platforms__icon" src="{{ link.image_url }}" alt="{{ key }}" width=30 />
-            {% endif %}
-            {% if show_label  %}
-              {{ link.title }}
-            {% endif %}
-          </a>
-        {% endif %}
-    {% endfor %}
+  {% set item_attributes = item.attributes.addClass([ 'social-media-platforms__link', 'social-media-platforms__link--' ~ key ]) %}
+  {% set item_attributes = item_attributes.setAttribute('href', item.url) %}
+  {% set item_attributes = item_attributes.setAttribute('target', '_blank') %}
+  {% set item_attributes = item_attributes.setAttribute('title', item.label) %}
+
+  <a {{ item_attributes }}>
+
+    {% if display_options.show_icon %}
+      <img class="social-media-platforms__icon" src="{{item.image}}" alt="{{item.label}}" >
+    {% endif %}
+
+    {% if display_options.show_label %}
+      {{ item.label }}
+    {% endif %}
+
+  </a>
+{% endfor %}
 </div>
