Added a container span html element for the social media platform to ease theming

--- a/templates/social-media-platforms-links.html.twig
+++ b/templates/social-media-platforms-links.html.twig
@@ -35,7 +35,7 @@
     {% endif %}
 
     {% if display_options.show_label %}
-      {{ item.label }}
+      <span class="social-media-platforms__label">{{ item.label }}</span>
     {% endif %}
 
   </a>
