--- a/css/social_media_platforms.theme.css
+++ b/css/social_media_platforms.theme.css
@@ -5,7 +5,7 @@
 .social-media-platforms__link:hover {
   color: #0a58ca;
 }
-@media (max-width: 75rem) {
+@media (min-width: 75rem) {
   .social-media-platforms__link img {
     display: inline-block;
     transform: rotate(90deg);
