moved inline display out of @media query

--- a/css/social_media_platforms.theme.css
+++ b/css/social_media_platforms.theme.css
@@ -2,12 +2,17 @@
   margin-right: 15px;
   text-decoration: none;
 }
+
 .social-media-platforms__link:hover {
   color: #0a58ca;
 }
+
+.social-media-platforms__link img {
+  display: inline-block;
+}
+
 @media (min-width: 75rem) {
   .social-media-platforms__link img {
-    display: inline-block;
     transform: rotate(90deg);
   }
 }
